[project]
name = "ez-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click==8.2.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true